Fix border not visible for media-video

--- a/src/components/status.css
+++ b/src/components/status.css
@@ -283,6 +283,7 @@
 }
 .status .media-video {
   position: relative;
+  background-clip: padding-box;
 }
 .status .media-video:before {
   /* draw a circle in the middle */
